try ar continue , enable cor firebase

--- a/user/public/trywig2D/index.html
+++ b/user/public/trywig2D/index.html
@@ -3,6 +3,7 @@
   <head>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="./zappar-aframe/zappar-aframe.js"></script>
+    <!-- <script src="https://libs.zappar.com/zappar-aframe/2.0.0/zappar-aframe.js"></script> -->
     <style>
       html,
       body {
@@ -16,7 +17,7 @@
       <a-entity zappar-permissions-ui id="permissions"></a-entity>
       <a-entity zappar-compatibility-ui id="compatibility"></a-entity>
       <a-assets>
-        <img id="faceImage" src="./images/wig.png" />
+        <img id="wigImage" crossorigin="anonymous" />
       </a-assets>
       <a-camera zappar-camera="user-facing: true;"></a-camera>
       <a-entity zappar-face id="face-group">
@@ -26,13 +27,18 @@
           position="0 0.2 1"
           width="2"
           height="2"
-          src="#faceImage"
+          src="#wigImage"
         ></a-image>
       </a-entity>
     </a-scene>
 
     <script>
+      const wigImage = document.querySelector("#wigImage");
       window.addEventListener("message", (event) => {
+        if (event.data.type === "select") {
+          wigImage.src = event.data.image;
+          console.log(wigImage);
+        }
         if (event.data.type === "capture") {
           const canvas = document
             .querySelector("a-scene")
