--- a/user/public/trywig2D/index.html
+++ b/user/public/trywig2D/index.html
@@ -17,27 +17,49 @@
       <a-entity zappar-permissions-ui id="permissions"></a-entity>
       <a-entity zappar-compatibility-ui id="compatibility"></a-entity>
       <a-assets>
-        <img id="wigImage" crossorigin="anonymous" />
+        <img id="wigImage" crossorigin="anonymous" onLoad="onWigImageLoad()" />
       </a-assets>
       <a-camera zappar-camera="user-facing: true;"></a-camera>
-      <a-entity zappar-face id="face-group">
-        <a-entity zappar-head-mask="face: #face-group;"></a-entity>
-        <a-image
-          id="face-overlay"
-          position="0 0.2 1"
-          width="2"
-          height="2"
-          src="#wigImage"
-        ></a-image>
+      <a-entity visibility-changer>
+        <a-entity zappar-face id="face-group">
+          <a-entity zappar-head-mask="face: #face-group;"></a-entity>
+          <a-image
+            id="face-overlay"
+            position="0 0.2 1"
+            width="2"
+            height="2"
+            src="#wigImage"
+          ></a-image>
+        </a-entity>
       </a-entity>
     </a-scene>
 
     <script>
-      const wigImage = document.querySelector("#wigImage");
+      AFRAME.registerComponent("visibility-changer", {
+        init: function () {
+          this.el.setAttribute("visible", false);
+          this.el.sceneEl.addEventListener("zappar-visible", () =>
+            this.el.setAttribute("visible", true)
+          );
+          this.el.sceneEl.addEventListener("zappar-notvisible", () =>
+            this.el.setAttribute("visible", false)
+          );
+        },
+      });
+
+      function onWigImageLoad() {
+        const wigImage = document.querySelector("#wigImage");
+        const faceGroup = document.querySelector("#face-group");
+        const headMask = document.querySelector("a-entity[zappar-head-mask]");
+
+        faceGroup.setAttribute("zappar-face", "");
+        headMask.setAttribute("zappar-head-mask", "face: #face-group;");
+      }
+
       window.addEventListener("message", (event) => {
         if (event.data.type === "select") {
-          wigImage.src = event.data.image;
-          console.log(wigImage);
+          const wigImage = document.querySelector("#wigImage");
+          wigImage.src = event.data.image + "?cache-buster=" + Date.now();
         }
         if (event.data.type === "capture") {
           const canvas = document
@@ -49,16 +71,8 @@
             event.origin
           );
         }
+        console.log("Image URL updated:", wigImage.src);
       });
     </script>
-    <!-- <script>
-      window.addEventListener("message", (event) => {
-        if (event.data.type === "capture") {
-          const canvas = document.querySelector("a-scene").components.screenshot.getCanvas("perspective", "none");
-          const dataUrl = canvas.toDataURL("image/png");
-          event.source.postMessage({ type: "screenshot", image: dataUrl }, event.origin);
-        }
-      });
-    </script> -->
   </body>
 </html>
