--- a/user/public/trywig2D/index.html
+++ b/user/public/trywig2D/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="./zappar-aframe/zappar-aframe.js"></script>
-    <!-- <script src="https://libs.zappar.com/zappar-aframe/2.0.0/zappar-aframe.js"></script> -->
+    <script src="https://libs.zappar.com/zappar-aframe/2.0.0/zappar-aframe.js"></script>
     <style>
       html,
       body {
