--- a/user/public/trywig2D/index.html
+++ b/user/public/trywig2D/index.html
@@ -16,7 +16,12 @@
       <a-entity zappar-permissions-ui id="permissions"></a-entity>
       <a-entity zappar-compatibility-ui id="compatibility"></a-entity>
       <a-assets>
-        <img id="wigImage" crossorigin="anonymous" onLoad="onWigImageLoad()" src="./images/wig.png"/>
+        <img
+          id="wigImage"
+          crossorigin="anonymous"
+          onload="onWigImageLoad()"
+          src="./images/wig.png"
+        />
       </a-assets>
       <a-camera zappar-camera="user-facing: true;"></a-camera>
       <a-entity visibility-changer>
